1.0.0 (October XX, 2024)
 - Added support for targeting rules based on large segments for browsers.
 - Added `factory.destroy()` method, which invokes the `destroy` method of all clients created by the factory.
 - Updated @splitsoftware/splitio-commons package to version 2.0.0 that includes major updates and updated some transitive dependencies for vulnerability fixes.
 - BREAKING CHANGES:
    - Removed internal ponyfills for the `Map` and `Set` global objects, dropping support for IE and other outdated browsers. The SDK now requires the runtime environment to support these features natively or provide a polyfill.
    - Removed the deprecated `GoogleAnalyticsToSplit` and `SplitToGoogleAnalytics` pluggable integration modules, along with the related interfaces in the TypeScript definitions.
    - Removed the `LocalhostFromObject` export from the default import (`import { LocalhostFromObject } from '@splitsoftware/splitio-browserjs'`). It is no longer necessary to manually import and configure it in the `sync.localhostMode` option to enable localhost mode.
    - Removed the "full" import (`import { SplitFactory } from '@splitsoftware/splitio-browserjs/full'`), since with the removal of `LocalhostFromObject` from the default import, the difference between them is minimal. The "full" import differs only by including the `unfetch` ponyfill to support older browsers.

0.15.0 (September 13, 2024)
 - Updated @splitsoftware/splitio-commons package to version 1.17.0 that includes minor updates:
    - Added `sync.requestOptions.getHeaderOverrides` configuration option to enhance SDK HTTP request Headers for Authorization Frameworks.
    - Updated some transitive dependencies for vulnerability fixes.

0.14.1 (June 14, 2024)
 - Updated @splitsoftware/splitio-commons package to version 1.16.0 that includes some vulnerability and bug fixes.